--- a/menu.css
+++ b/menu.css
@@ -40,7 +40,7 @@
     width: 100%;
     height: 2px;
     /* background-color: #fff; */
-    background-color: #d5b6a3;
+    background-color: #a48c64;
     display: flex;
     align-items: center;
     justify-content: center;
