--- a/calendar.css
+++ b/calendar.css
@@ -180,19 +180,19 @@ body {
   margin: 0 1px;
 }
 
-.slot7 .slot8 .slot9 .slot10 {
+.slot7, .slot8, .slot9, .slot10 {
   background: #f3ca9e;
   border-radius: 2px;
 }
-.slot11 .slot12 .slot13 {
+.slot11, .slot12, .slot13 {
   background: #aac7e6;;
   border-radius: 2px;
 }
-.slot14 .slot15 .slot16 {
+.slot14, .slot15, .slot16 {
   background: #61a279;
   border-radius: 2px;
 }
-.slot17 .slot18 .slot19 .slot20 {
+.slot17, .slot18, .slot19, .slot20 {
   background: #af7b67;;
   border-radius: 2px;
 }
@@ -331,16 +331,16 @@ body {
   left: 14px;
 }
 
-.entry.slot7:after .entry.slot8:after .entry.slot9:after .entry.slot10:after {
+.entry.slot7:after, .entry.slot8:after, .entry.slot9:after, .entry.slot10:after {
   background: #aac7e6;
 }
-.entry.slot11:after .entry.slot12:after .entry.slot13:after {
+.entry.slot11:after, .entry.slot12:after, .entry.slot13:after {
   background: #a67a53;
 }
-.entry.slot14:after .entry.slot15:after .entry.slot16:after {
+.entry.slot14:after, .entry.slot15:after, .entry.slot16:after {
   background: #3c6494;
 }
-.entry.slot17:after .entry.slot18:after .entry.slot19:after .entry.slot20:after {
+.entry.slot17:after, .entry.slot18:after, .entry.slot19:after, .entry.slot20:after {
   background: #53543b;
 }
 
