--- a/calendar.css
+++ b/calendar.css
@@ -286,11 +286,11 @@ body {
 }
 
 .event-category {
-  height: 7px;
-  width: 7px;
+  height: 14px;
+  width: 14px;
   display: inline-block;
-  margin: 8px 0 0;
-  vertical-align: top;
+  margin: 0 0 0;
+  vertical-align: middle;
 }
 
 .event span {
@@ -309,6 +309,7 @@ body {
   background: #7b7069;
   border-radius: 3px;
   line-height: 22px;
+  align-items: center;
 }
 
 .entry {
@@ -550,15 +551,15 @@ body {
   .slot18,
   .slot19,
   .slot20 {
-    height: 6px;
-    width: 6px;
+    height: 14px;
+    width: 14px;
   }
 }
 
 @media (max-width: 338px) {
   .day .day-slots span {
-    width: 3px;
-    height: 3px;
+    width: 8px;
+    height: 14px;
     border-radius: 0.5px;
   }
 
