--- a/calendar.css
+++ b/calendar.css
@@ -306,8 +306,8 @@ body {
   justify-content: space-evenly;
   bottom: 10px;
   width: 100%;
-  //background: #7b7069;
-  color: #7b7069;
+  background: #7b7069;
+  //color: #7b7069;
   border-radius: 3px;
   line-height: 22px;
   align-items: center;
