--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ a {
 #re-heading {
   color: #4f3f36;
   text-align: center;
+  font-size: x-large;
   padding-top: 70px;
   margin: 0 18px;
   font-weight: lighter;
@@ -76,7 +77,7 @@ a {
 
 #main-nav {
   display: flex;
-  position: fixed;
+  //position: fixed;
   top: 0;
   left: 0;
   width: 100%;
