--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ a {
 #showcase .showcase-content {
   color: #fff;
   text-align: center;
-  padding-top: 220px;
+  padding-top: 15%;
 }
 
 #showcase .showcase-content h1 {
