--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a {
 
 #main-nav {
   display: flex;
-  //position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -126,7 +126,6 @@ a {
 /* #main-sauna p {
   margin: 0 40%;
 } */
-
 
 #header-home {
   background-image: url(/img/IMG-20220420-WA0000.jpg);
