--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ a {
 #showcase .showcase-content {
   color: #fff;
   text-align: center;
-  padding-top: 20%;
+  padding-top: 8%;
 }
 
 #showcase .showcase-content h1 {
@@ -282,6 +282,12 @@ a {
 
 #text .btn {
   margin-top: 30px;
+}
+
+@media (max-width: 570px) {
+  #showcase .showcase-content {
+    padding-top: 30%;
+  }
 }
 
 /* Gallery */
