--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ a {
   padding-bottom: 40px;
   color: #614738;
 } */
-/* 
+
 .oznam {
   /* background-color: #97847885; */
   /* background-color: #1e3c5e85; */
@@ -265,7 +265,7 @@ a {
 
 .oznam h3 {
   margin: 10px 0;
-} */
+}
 
 #text {
   /* background-color: rgba(245, 245, 220, 0.755); */
