Migrate to Space

--- a/style.css
+++ b/style.css
@@ -250,7 +250,8 @@ a {
 
 .oznam {
   /* background-color: #97847885; */
-  background-color: #1e3c5e85;
+  /* background-color: #1e3c5e85; */
+  background-color: #1e3c5ea4;
   /* color: #4f3f36; */
   color: white;
   border-radius: 5px;
