--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ a {
 }
 
 #success {
-  background-image: url(/img/IMG-20220420-WA0005.jpg);
+  background-image: url(/img/IMG20230529152655.jpg);
   background-repeat: round;
   background-size: cover;
   width: 100vw;
