snow on the road announcment

--- a/style.css
+++ b/style.css
@@ -267,9 +267,9 @@ a {
   line-height: 10px;
 }
 
-/* .oznam h3 {
+.oznam h3 {
   margin: 10px 0;
-} */
+}
 
 #text {
   /* background-color: rgba(245, 245, 220, 0.755); */
