--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ a {
 
 #header-home-contact {
   /* background-image: url(/img/IMG-20220420-WA0006.jpg); */
-  background-image: url(/img/IMG20230529153059.jpg);
+  /* background-image: url(/img/IMG20230529153059.jpg); */
+  background-image: url(/img/IMG20221225113701.jpg);
   background-repeat: round;
   background-size: cover;
   height: 630px;
