change of images

--- a/style.css
+++ b/style.css
@@ -128,17 +128,17 @@ a {
 } */
 
 #header-home {
-  background-image: url(/img/IMG20221225113701.jpg);
-  /* background-image: url(/img/IMG20230529152655.jpg); */
+  /* background-image: url(/img/IMG20221225113701.jpg);*/
+  background-image: url(/img/IMG20230529152655.jpg);
   background-repeat: round;
   background-size: cover;
   height: 630px;
 }
 
 #header-home-contact {
-  /* background-image: url(/img/IMG-20220420-WA0006.jpg); */
+  background-image: url(/img/IMG-20220420-WA0006.jpg);
   /* background-image: url(/img/IMG20230529153059.jpg); */
-  background-image: url(/img/IMG20221225113701.jpg);
+  /* background-image: url(/img/IMG20221225113701.jpg); */
   background-repeat: round;
   background-size: cover;
   height: 630px;
