--- a/v2-calendar.css
+++ b/v2-calendar.css
@@ -197,7 +197,7 @@ body {
   border-radius: 2px;
 }
 .slot21, .slot22, .slot23, .slot24 {
-  background: #1a1a2e;;
+  background: #4b3a2f;;
   border-radius: 2px;
 }
 
