--- a/v2-form.css
+++ b/v2-form.css
@@ -41,6 +41,13 @@
   cursor: pointer;
 }
 
+.re-button:disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
 #reservation input {
   font-size: larger;
   padding: 6px;
